--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="C:\Users\mouan\Downloads\portfolio\WhatsApp Image 2025-09-13 at 21.53.06_78fb7713.jpg" alt="Priscia's Logo" class="logo">
+    <img src="C:\Users\mouan\Downloads\portfolio\images\WhatsApp Image 2025-09-13 at 21.53.06_78fb7713.jpg" alt="Priscia's Logo" class="logo">
     <h1>Priscia Mabhyala</h1>
     <p>Aspiring Developer | Tech Enthusiast | Fitness Lover</p>
   </header>
